--- a/index.html
+++ b/index.html
@@ -66,16 +66,18 @@
         </ol>
     </section>
 
-   <!-- Seção de Contato -->
-<div id="contact">
-    <h2>Entre em contato com o especialista</h2>
-    <div class="contact-button">
-      <img src="caminho-da-imagem.jpg" alt="Imagem representativa" />
-      <a href="https://wa.me/seu-numero-de-whatsapp" target="_blank" class="contact-link">
-        Entre em contato agora
+<!-- Seção de Contato -->
+<section id="contact">
+    <h2>Fale com o Especialista</h2>
+    <p>Entre em contato para obter a melhor consultoria personalizada para o seu rebanho.</p>
+    <div class="contact-card">
+      <img src="Assets/Natan.png" alt="Especialista" />
+      <a href="https://wa.me/seu-numero-de-whatsapp" target="_blank" class="contact-button">
+        <span>📞</span> Fale agora via WhatsApp
       </a>
     </div>
-  </div>
+  </section>
+  
      
 
     <!-- FAQ -->
